Insignia z-index fix.

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body{
   	transform: translateY(-50%);
 	margin: 0px 20px 0px 25px;
 	float: left;
+	z-index: 10;
 }
 
 .cu-logo{
